# crispy

./: .deepsource.toml  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  LICENSE  LICENSE.rst  MANIFEST.in  Pipfile  README.md  README.rst  conftest.py  crispy.py  installer.cfg  pylintrc  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  setup_cx_freeze.py  setup_py2app.py  version.py
.github/workflows/: build.yml  cd.yml  ci.yml  pypi.yml  release.yml
assets/: DS_Store  create_dmg.sh  create_installer.iss  crispy.icns
crispy/: __init__.py  __main__.py  broaden.py  config.py  crispy.py  items.py  loggers.py  main.py  models.py  notebook.py  plot.py  profiling.py  utils.py  version.py  views.py  widgets.py
crispy/backends/: __init__.py  quanty.py
crispy/backends/quanty/: quanty.py  run.py
crispy/backends/quanty/templates/: 001.lua  002.lua  003.lua  004.lua  005.lua  006.lua  007.lua  008.lua  009.lua  010.lua  013.lua
crispy/data/: dark.qss  parameters.json
crispy/gui/: canvas.py  canvas.ui  config.py  items.py  listmodel.py  main.py  models.py  plot.py  quanty.py  spectrum.py  treemodel.py  utils.py  views.py  widgets.py
crispy/gui/models/: listmodel.py  treemodel.py
crispy/gui/quanty/: axes.py  calculation.py  details.py  hamiltonian.py  main.py  preferences.py  spectra.py
crispy/gui/uis/quanty/: axis.ui  details.ui  model.ui  preferences.ui
crispy/gui/views/: treeview.py
crispy/gui/widgets/: combobox.py  lineedit.py  plotwidget.py
crispy/modules/quanty/: calculations.json  generate.py  utils.py
crispy/modules/quanty/templates/: 3d_C3v_XAS_1s.lua  3d_C3v_XAS_2p.lua  3d_C3v_XAS_2s.lua  3d_C3v_XAS_3p.lua  3d_C3v_XAS_3s.lua  3d_D3h_XAS_1s.lua  3d_D3h_XAS_2p.lua  3d_D3h_XAS_2s.lua  3d_D3h_XAS_3p.lua  3d_D3h_XAS_3s.lua  3d_D4h_RIXS_2p3d.lua  3d_D4h_XAS_1s.lua  3d_D4h_XAS_2p.lua  3d_D4h_XAS_2s.lua  3d_D4h_XAS_3p.lua  3d_D4h_XAS_3s.lua  3d_Oh_RIXS_2p3d.lua  3d_Oh_XAS_1s.lua  3d_Oh_XAS_2p.lua  3d_Oh_XAS_2s.lua  3d_Oh_XAS_3p.lua  3d_Oh_XAS_3s.lua  3d_Td_RIXS_2p3d.lua  3d_Td_XAS_1s.lua  3d_Td_XAS_2p.lua  3d_Td_XAS_2s.lua  3d_Td_XAS_3p.lua  3d_Td_XAS_3s.lua  4d_C3v_XAS_2p.lua  4d_C3v_XAS_2s.lua  4d_C3v_XAS_3p.lua  4d_C3v_XAS_3s.lua  4d_C3v_XAS_4p.lua  4d_C3v_XAS_4s.lua  4d_D3h_XAS_2p.lua  4d_D3h_XAS_2s.lua  4d_D3h_XAS_3p.lua  4d_D3h_XAS_3s.lua  4d_D3h_XAS_4p.lua  4d_D3h_XAS_4s.lua  (+68 more)
crispy/modules/quanty/test/: test_quanty.py
crispy/quanty/: __init__.py  axes.py  calculation.py  calculations.json  calculations.yaml  cowan.py  details.py  generate.py  hamiltonian.py  main.py  preferences.py  progress.py  spectra.py
crispy/quanty/parameters/: Ac.h5  Ag.h5  Am.h5  Au.h5  Ce.h5  Cm.h5  Co.h5  Cr.h5  Cu.h5  Dy.h5  Er.h5  Eu.h5  Fe.h5  Gd.h5  Hf.h5  Ho.h5  Ir.h5  La.h5  Mn.h5  Mo.h5  Nb.h5  Nd.h5  Ni.h5  Np.h5  Os.h5  Pa.h5  Pd.h5  Pm.h5  Pr.h5  Pt.h5  Pu.h5  Re.h5  Rh.h5  Ru.h5  Sc.h5  Sm.h5  Ta.h5  Tb.h5  Tc.h5  Th.h5  (+8 more)
crispy/quanty/templates/: 3d_C3v_RIXS_1s2p.lua  3d_C3v_RIXS_1s3p.lua  3d_C3v_RIXS_2p3d.lua  3d_C3v_XAS_1s.lua  3d_C3v_XAS_2p.lua  3d_C3v_XAS_2s.lua  3d_C3v_XAS_3p.lua  3d_C3v_XAS_3s.lua  3d_C3v_XPS_1s.lua  3d_C3v_XPS_2p.lua  3d_C3v_XPS_2s.lua  3d_C3v_XPS_3p.lua  3d_C3v_XPS_3s.lua  3d_D3h_RIXS_1s2p.lua  3d_D3h_RIXS_1s3p.lua  3d_D3h_RIXS_2p3d.lua  3d_D3h_XAS_1s.lua  3d_D3h_XAS_2p.lua  3d_D3h_XAS_2s.lua  3d_D3h_XAS_3p.lua  3d_D3h_XAS_3s.lua  3d_D3h_XPS_1s.lua  3d_D3h_XPS_2p.lua  3d_D3h_XPS_2s.lua  3d_D3h_XPS_3p.lua  3d_D3h_XPS_3s.lua  3d_D4h_RIXS_1s2p.lua  3d_D4h_RIXS_1s3p.lua  3d_D4h_RIXS_2p3d.lua  3d_D4h_XAS_1s.lua  3d_D4h_XAS_2p.lua  3d_D4h_XAS_2s.lua  3d_D4h_XAS_3p.lua  3d_D4h_XAS_3s.lua  3d_D4h_XPS_1s.lua  3d_D4h_XPS_2p.lua  3d_D4h_XPS_2s.lua  3d_D4h_XPS_3p.lua  3d_D4h_XPS_3s.lua  3d_Oh_RIXS_1s2p.lua  (+199 more)
crispy/quanty/templates/meta/: helper_functions.lua
crispy/quanty/templates/tests/: test_data.json  test_data.yaml  test_templates.py
crispy/quanty/tests/: test_quanty.py
crispy/quanty/uis/: general.ui  hamiltonian.ui  main.ui
crispy/quanty/uis/details/: main.ui
crispy/resources/: __init__.py  parameters.json
crispy/resources/gui/: main.ui
crispy/resources/gui/uis/: about.ui  canvas.ui  main.ui  quanty.ui  quantyPreferences.ui
crispy/scripts/: crispy
crispy/templates/: xas_2p3d.template
crispy/uis/: about.ui  main.ui
crispy/utils/: broaden.py
doc/: conf.py  downloads.rst  editing.rst  index.rst  usage.rst
doc/_build/doctrees/: changelog.doctree  citation.doctree  downloads.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
doc/_build/html/: .buildinfo  changelog.html  citation.html  downloads.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
doc/_static/: custom.css
doc/about/: citation.rst  index.rst
doc/getting_started/: downloads.rst  index.rst  installation.rst  usage.rst
doc/tutorials/: fe_spin_transition.rst  index.rst  ni_ligand_field.rst  ti_l23_xas.rst
doc/user_guide/: crystal_field.rst  editing.rst  index.rst  supported_systems.rst
docs/: changelog.rst  citation.rst  conf.py  download.rst  downloads.rst  index.rst  installation.rst  usage.rst
docs/assets/: crispy.icns
docs/tutorials/: fe_spin_transition.rst  index.rst  ni_ligand_field.rst  ti_l23_xas.rst
icons/: crispy.icns  crispy.tiff
notebooks/: 0_first_calculation.ipynb  1_varying_parameters.ipynb  2_actinides_covalency.ipynb  first_calculation.ipynb
package/: README.rst  codesign.sh  create-dmg.sh  create-installer.iss.template  crispy.spec  merge-universal.py  notarize.sh  requirements.txt  scan-virustotal.py
scripts/: crispy
src/crispy/: __init__.py  __main__.py  broaden.py  config.py  items.py  load.py  loggers.py  models.py  notebook.py  plot.py  profiling.py  uic.py  utils.py  views.py  widgets.py
src/crispy/quanty/: __init__.py  axes.py  calculation.py  calculations.yaml  cowan.py  details.py  external.py  generate.py  hamiltonian.py  main.py  preferences.py  progress.py  scan.py  serialization.py  spectra.py
src/crispy/uis/: about.ui  load.ui  main.ui  update.ui
(+1234 files in other folders)
