[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2", "wheel"]

[project]
name = "crispy"
description = "Core-Level Spectroscopy Simulations in Python"
keywords = ["gui", "science", "simulation", "spectroscopy", "synchrotron"]
readme = "README.rst"
authors = [{ name = "Marius Retegan", email = "marius.retegan@esrf.fr" }]
license = { text = "MIT" }
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["h5py", "matplotlib", "numpy", "pyqt6", "ruamel.yaml", "silx", "xraydb"]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/mretegan/crispy/blob/main/CHANGELOG.rst"
Documentation = "https://crispy.esrf.fr"
Downloads = "https://github.com/mretegan/crispy/releases"
Homepage = "https://github.com/mretegan/crispy"
Source = "https://github.com/mretegan/crispy"
Tracker = "https://github.com/mretegan/crispy/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-qt",
    "ruff",
]
docs = ["sphinx", "sphinx-rtd-theme"]
notebook = ["jupyter", "ipympl"]
bundle = [
    "build",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "twine",
]

[project.gui-scripts]
crispy = "crispy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "crispy.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "C4",    # flake8-comprehensions
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["crispy"]
