[metadata]
name = crispy
version = attr: crispy.__version__
description = Core-Level Spectroscopy Simulations in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mretegan/crispy
author = Marius Retegan
author_email = marius.retegan@esrf.fr
license = MIT
license_file = LICENSE.rst
classifiers =
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
download_url = https://github.com/mretegan/crispy/releases
keywords = gui, spectroscopy, simulation, synchrotron, science
project_urls =
    Source = https://github.com/mretegan/crispy
    Documentation = https://www.esrf.fr/computing/scientific/crispy
    Tracker = https://github.com/mretegan/crispy/issues
    Changelog = https://github.com/mretegan/crispy/blob/main/CHANGELOG.rst

[options]
packages = find:
install_requires =
    PyQt6
    h5py
    matplotlib
    numpy
    packaging
    pyyaml
    silx
    wheel
    xraydb
python_requires = >=3.7
include_package_data = True

[options.entry_points]
gui_scripts =
    crispy = crispy.__main__:main

[options.extras_require]
all =
    %(dev)s
    %(doc)s
dev =
    black
    pylint
    twine
    pyinstaller @ https://github.com/pyinstaller/pyinstaller/archive/develop.zip
    mypy
    %(test)s
test = 
    pytest
doc =
    cloud-sptheme
    sphinx
    sphinx-rtd-theme

[isort]
profile = black

[pylint.MAIN]
extension-pkg-allow-list = PyQt5

[pylint.MESSAGES CONTROL]
disable =
    invalid-name,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    bad-continuation,
    too-few-public-methods,

[pylint.REPORTS]
score = no
